--- a/src/assets/fonts/fontello/demo.html
+++ b/src/assets/fonts/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?82794048');
-      src: url('./font/fontello.eot?82794048#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?82794048') format('woff'),
-           url('./font/fontello.ttf?82794048') format('truetype'),
-           url('./font/fontello.svg?82794048#fontello') format('svg');
+      src: url('./font/fontello.eot?10200736');
+      src: url('./font/fontello.eot?10200736#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?10200736') format('woff'),
+           url('./font/fontello.ttf?10200736') format('truetype'),
+           url('./font/fontello.svg?10200736#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -326,12 +326,17 @@
         <div class="span3" title="Code: 0xf09b">
           <i class="demo-icon icon-github-circled">&#xf09b;</i> <span class="i-name">icon-github-circled</span><span class="i-code">0xf09b</span>
         </div>
+        <div class="span3" title="Code: 0xf0e1">
+          <i class="demo-icon icon-linkedin">&#xf0e1;</i> <span class="i-name">icon-linkedin</span><span class="i-code">0xf0e1</span>
+        </div>
         <div class="span3" title="Code: 0x10f16">
           <i class="demo-icon icon-wallet">&#x10f16;</i> <span class="i-name">icon-wallet</span><span class="i-code">0x10f16</span>
         </div>
         <div class="span3" title="Code: 0x1869e">
           <i class="demo-icon icon-instagram">&#x1869e;</i> <span class="i-name">icon-instagram</span><span class="i-code">0x1869e</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0x1869f">
           <i class="demo-icon icon-twitter">&#x1869f;</i> <span class="i-name">icon-twitter</span><span class="i-code">0x1869f</span>
         </div>
